--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -1,7 +1,7 @@
 cabal-version: 3.4
 
 name:           henforcer
-version:        0.1.0.0
+version:        0.1.0.1
 synopsis:       GHC plugin to enforce user specified rules on code.
 description:    Please see the README on GitHub at <https://github.com/flipstone/henforcer#readme>
 category:       Development, Compiler Plugin, static-analysis
@@ -19,7 +19,7 @@ extra-source-files:
 extra-doc-files:
     ChangeLog.md
 
-tested-with: GHC == 9.4.5, GHC == 9.6.3, GHC == 9.8.1
+tested-with: GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.3, GHC == 9.10.1
 
 source-repository head
   type: git
@@ -68,16 +68,17 @@ common ci-warnings
 library henforcer-internal
   exposed-modules:
       CompatGHC
-      Henforcer.Config
       Henforcer.Checks
+      Henforcer.CodeStructure
+      Henforcer.Config
       Henforcer.Options
+      Henforcer.Rules
   other-modules:
       Paths_henforcer
       Henforcer.Checks.DocumentationCheck
       Henforcer.Checks.ImportCheck
       Henforcer.Checks.ImportCheck.Check
       Henforcer.Checks.ImportCheck.CheckFailure
-      Henforcer.CodeStructure
       Henforcer.CodeStructure.Import
       Henforcer.CodeStructure.Import.AllowedAliasUniqueness
       Henforcer.CodeStructure.Import.Import
@@ -93,7 +94,6 @@ library henforcer-internal
       Henforcer.Config.ForSpecifiedModule
       Henforcer.Config.IgnoreRules
       Henforcer.Config.TreeDependencies
-      Henforcer.Rules
       Henforcer.Rules.ConditionallyEnforced
       Henforcer.Rules.Maximum
       Henforcer.Rules.Minimum
@@ -114,15 +114,15 @@ library henforcer-internal
     -O2
 
   build-depends:
-      base >=4.7 && <5
+      base >=4.17 && <5
     , containers >=0.6 && < 0.8
     , dlist >=1.0 && <1.1
     , filepattern >=0.1 && <0.2
-    , ghc >= 9.2.1 && <9.11
+    , ghc >= 9.4.1 && <9.11
     , optparse-applicative >=0.14 && <0.19
     , pollock >= 0.1.0.1 && <0.2
     , text >=1.2 && <2.2
-    , tomland == 1.3.3.2
+    , tomland >= 1.3.3.2 && < 1.4
 
   default-extensions: StrictData
   default-language: Haskell2010
@@ -166,10 +166,38 @@ executable henforcer
     import: ci-warnings
 
   build-depends:
-      base >=4.7 && <5
+      base >=4.17 && <5
     , bytestring >= 0.11 && < 0.13
     , directory >=1.3 && < 1.5
     , file-embed ==0.0.*
     , henforcer:henforcer-internal
+
+  default-language: Haskell2010
+
+test-suite spec
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs:
+    test
+
+  other-modules:
+    Test.Config
+    Test.Config.Documentation
+    Test.Config.Import
+
+  ghc-options:
+      -threaded
+      -rtsopts
+      -with-rtsopts=-N
+  if flag(ci)
+    import: ci-warnings
+
+  build-depends:
+      base >=4.7 && <5
+    , containers >=0.6 && < 0.8
+    , henforcer:henforcer-internal
+    , hedgehog >= 1.2 && < 1.6
+    , tasty >= 1.4 && < 1.6
+    , tasty-hedgehog >= 1.4 && < 1.5
 
   default-language: Haskell2010
