--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,7 +3,7 @@ linux_test_task:
     image: ghcr.io/flipstone/haskell-tools:debian-stable-ghc-9.6.6-2024-10-23-eb5da39
     cpu: 6
     memory: 6G
-  stack_cache:
+  linux_stack_cache:
     folder: ~/.stack
     fingerprint_script:
       - cat stack.yaml.lock henforcer.cabal
@@ -12,7 +12,7 @@ linux_test_task:
       - apt install bmake
       - export PATH=$PATH:/root/.local/bin:/root/.ghcup/bin
       - bmake setup-stack
-  ghcup_cache:
+  linux_ghcup_cache:
     folder: /usr/local/.ghcup
     fingerprint_script:
       - cat Makefile
@@ -21,7 +21,7 @@ linux_test_task:
       - apt install bmake
       - export PATH=$PATH:/root/.local/bin:/root/.ghcup/bin
       - bmake setup-ghc
-  cabal_cache:
+  linux_cabal_cache:
     folder: ~/.local/state/cabal
     fingerprint_script:
       - cat Makefile henforcer.cabal
@@ -39,24 +39,24 @@ linux_test_task:
     - export PATH=$PATH:/root/.local/bin:/root/.ghcup/bin
     - bmake ci
   upload_caches:
-    - stack
-    - ghcup
-    - cabal
+    - linux_stack
+    - linux_ghcup
+    - linux_cabal
 
 freebsd_test_task:
   freebsd_instance:
     image_family: freebsd-14-1
     cpu: 6
     memory: 6G
-  stack_cache:
+  freebsd_stack_cache:
     folder: ~/.stack
     fingerprint_script:
       - cat stack.yaml.lock henforcer.cabal
-  cabal_cache:
+  freebsd_cabal_cache:
     folder: ~/.local/state/cabal
     fingerprint_script:
       - cat Makefile henforcer.cabal
-  ghcup_cache:
+  freebsd_ghcup_cache:
     folder: /usr/local//.ghcup
     fingerprint_script:
       - cat Makefile
@@ -69,7 +69,7 @@ freebsd_test_task:
       - export STACK_YAMLS=
       - make setup-cabal
   upload_caches:
-    - ghcup
+    - freebsd_ghcup
   install_script:
     - pkg install -y hs-stack hs-cabal-install curl
     - curl -o /usr/local/bin/ghcup https://downloads.haskell.org/\~ghcup/0.1.30.0/x86_64-portbld-freebsd-ghcup-0.1.30.0
@@ -85,22 +85,22 @@ freebsd_test_task:
     # no reason to test everything, like formatting, on every platform
     - make test-cabal
   upload_caches:
-    - cabal
+    - freebsd_cabal
 
 macos_test_task:
   macos_instance:
     image: ghcr.io/cirruslabs/macos-ventura-base:latest
     cpu: 6
     memory: 6G
-  stack_cache:
+  macos_stack_cache:
     folder: ~/.stack
     fingerprint_script:
       - cat stack.yaml.lock henforcer.cabal
-  cabal_cache:
+  macos_cabal_cache:
     folder: ~/.local/state/cabal
     fingerprint_script:
       - cat Makefile henforcer.cabal
-  ghcup_cache:
+  macos_ghcup_cache:
     folder: /usr/local/.ghcup
     fingerprint_script:
       - cat Makefile
@@ -110,7 +110,7 @@ macos_test_task:
       - source /Users/admin/.ghcup/env
       - GHC_VERSIONS=9.4.8 STACK_YAMLS=stack.yaml bmake setup-ghc setup-cabal setup-stack
   upload_caches:
-    - ghcup
+    - macos_ghcup
   install_script:
     - brew install haskell-stack cabal-install bmake
     - curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | sh
@@ -123,5 +123,5 @@ macos_test_task:
     # no reason to test everything, like formatting, on every platform
     - GHC_VERSIONS=9.4.8 STACK_YAMLS=stack.yaml bmake test-cabal test-stack
   upload_caches:
-    - stack
-    - cabal
+    - macos_stack
+    - macos_cabal
