--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -19,7 +19,7 @@ extra-source-files:
 extra-doc-files:
     ChangeLog.md
 
-tested-with: GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.3, GHC == 9.10.1
+tested-with: GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1, GHC == 9.12.1
 
 source-repository head
   type: git
