--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,9 +9,11 @@ linux_test_task:
         STACK_YAMLS:
       - GHC_VERSIONS: 9.6.6
         STACK_YAMLS:
+      - GHC_VERSIONS: 9.6.7
+        STACK_YAMLS:
       - GHC_VERSIONS: 9.8.4
         STACK_YAMLS:
-      - GHC_VERSIONS: 9.10.1
+      - GHC_VERSIONS: 9.10.2
         STACK_YAMLS:
       # - GHC_VERSIONS: 9.12.2
       #   STACK_YAMLS:
