--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -18,7 +18,7 @@ extra-source-files:
 extra-doc-files:
     ChangeLog.md
 
-tested-with: GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1, GHC == 9.12.2
+tested-with: GHC == 9.4.8, GHC == 9.6.6, GHC == 9.6.7, GHC == 9.8.4, GHC == 9.10.2, GHC == 9.12.2
 
 source-repository head
   type: git
@@ -120,7 +120,7 @@ library henforcer-internal
     , dlist >=1.0 && <1.1
     , filepattern >=0.1 && <0.2
     , ghc >= 9.4.1 && <9.13
-    , optparse-applicative >=0.14 && <0.19
+    , optparse-applicative >=0.14 && <0.20
     , pollock >= 0.1.0.1 && <0.2
     , text >=1.2 && <2.2
     , tomland >= 1.3.3.2 && < 1.4
