--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -10,7 +10,7 @@ bug-reports:    https://github.com/flipstone/henforcer/issues
 author:         Flipstone Technology Partners
 maintainer:     maintainers@flipstone.com
 copyright:      2020-2025 Flipstone Technology Partners
-license:        BSD-3-Clause
+license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
