--- a/stack.yaml
+++ b/stack.yaml
@@ -4,4 +4,5 @@ packages:
   - .
 
 extra-deps:
-  - pollock-0.1.0.1
+  - pollock-0.1.0.3
+  - Cabal-syntax-3.14.2.0@sha256:16766e2cd18f98bf259d2caf2b507764ebdfff0b16c2fb5b293fc57c1137af6f,7380
