Really support GHC-9.14.1
We have some dependencies that still have not been updated, but it
would seem those just need some version bound bumps. With the small
changes here, using --allow-newer in cabal really will allow
everything to work.

--- a/henforcer.cabal
+++ b/henforcer.cabal
@@ -58,9 +58,11 @@ common ci-warnings
         -Wincomplete-export-warnings
         -Wimplicit-rhs-quantification
         -Wterm-variable-capture
-    if impl (ghc >= 9.10)
+    if impl (ghc >= 9.10) && impl (ghc < 9.14)
       ghc-options:
         -Wdeprecated-type-abstractions
+    if impl (ghc >= 9.10)
+      ghc-options:
         -Wdefaulted-exception-context
     if impl (ghc >= 9.12)
       ghc-options:
